--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,10 @@
-body {
-    font-family: 'Arial', sans-serif;
-    margin: 0;
-    padding: 0;
+div{
+    color: aqua;
+    background-color: red;
+    width: 20rem;
+    height: 20rem;
 }
 
-header, nav, section, article, footer {
-    margin: 20px;
-}
-
-header {
-    text-align: center;
-    background-color: #333;
-    color: white;
-    padding: 10px;
-}
-
-nav ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-around;
-    background-color: #f5f5f5;
-    padding: 10px;
-}
-
-nav a {
-    text-decoration: none;
-    color: #333;
-}
-
-section {
-    margin-top: 40px;
-}
-
-article {
-    border: 1px solid #ccc;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-
-footer {
-    text-align: center;
-    background-color: #333;
-    color: white;
-    padding: 10px;
-}
+// block  bagal me koi nahi aaega 
+// inline bagal me aa sakte ho 
+// inlineblock allow bhi karega aajao aur changes bhi kar sakte hai height aur width me 
